# vpltools

./: .gitignore  LICENSE.txt  README.md  __init__.py  findmodules.py  make_vpl_evaluate_cases.py  pyproject.toml  setup.py  vpl_evaluate.cases
findmodules.egg-info/: PKG-INFO  SOURCES.txt
snippets/: end_to_end_test_snippet.py  python_test_snippet.py  regex_test_snippet.py  sql_select_test_snippet.py  vpltools.code-snippets  vscode_snippet_maker.py
src/findmodules/: __init__.py  filecomparisontest.py  findmodules.py  historysearcher.py  make_vpl_evaluate_cases.py  opaquetest.py  regextest.py  setup.py  test_sample.py  vpl_test_case.py  vpl_unittest.py
src/findmodules.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/vpltools/: __init__.py  __main__.py  basic_tests.py  historysearcher.py  make_vpl_evaluate_cases.py  regextest.py  setup.py  sql_test_case.py  supported_languages.py  vpl_evaluate.cases  vpl_test_case.py
src/vpltools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/hello_c/: student_program_hello  template_pre_vpl_run.sh  test_hello.py  test_hello_C.py  vpl_evaluate.cases
tests/hello_fortran/: main.f90  student_program_main  test_hello_fortran.py  vpl_evaluate.cases
tests/hello_java/: test_hello_java.py  vpl_evaluate.cases
tests/java_multi_class_package/: test_java_multi_class_package.py
tests/java_multi_class_package/dogstacker/: Dog.java  DogStack.java  Main.java  (+1 more)
tests/java_multi_class_program/: Dog.java  DogStack.java  Main.java  pre_vpl_run.sh  test_java_multi_class_program.py  vpl_evaluate.cases
tests/key_program_C/: key_program_key_program  student_program_stud_program  test_key_program_C.py  vpl_evaluate.cases
tests/regular_expressions/: assignment_description.html  pre_vpl_run.sh  regex_answers.py  test_regex.py  vpl_evaluate.cases
tests/sql_query_1/: __init__.py  all_owners_lab.sql  assignment_description.html  key_all_owners.sql  pre_vpl_run.sh  red_river_climbs_sqlite.sql  test_all_owners.py  vpl_evaluate.cases
tests/sql_query_2/: assignment_description.html  key_max_developer_grades.sql  max_dev_grade.sql  pre_vpl_run.sh  red_river_climbs_mariadb.sql  test_max_developer_grades.py  vpl_evaluate.cases
