# Tom's Obvious Minimal Language
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vpltools"
version = "0.20"
authors = [
  { name="William Bailey", email="william.bailey@centre.edu" },
]
description = "Facilitates Moodle VPL use by providing extensible subclasses of unittest.TestCase."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "mariadb >=1.1.12",
  "pandas >=2.2.4",
  "bottleneck >=1.3.6",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wba234/baileycs1"
